--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="publisher" content="NINJAJAGO" />
     <meta name="author" content="NINJAJAGO">
     <meta name="google-site-verification" content="91nfO_JReUzoyO70IWjSYDXVgk79gfqXTND4yqQc-tY" />
-    <link rel="amphtml" href="https://soul-link.com/pages/template1/">
+    <link rel="amphtml" href="https://smkpelitanusantara.sch.id">
     <link rel="canonical" href="https://smkpelitanusantara.sch.id" />
     <link rel="alternate" hreflang="id" href="https://smkpelitanusantara.sch.id" />
 
