--- a/index.html
+++ b/index.html
@@ -1001,9 +1001,9 @@
         <a href="https://smkpelitanusantara.sch.id"><amp-img width="300px" height="70px" src="https://i.postimg.cc/c4Z0PcT7/logo-slot-ninjajago.png" alt="NINJAJAGO : AGEN SLOT GACOR TERPERCAYA HARI INI 2023"></amp-img></a>
         <nav>
             <ul>
-                <a href="https://rizkyseo.store/phising" target="_blank" rel="nofollow"><li>daftar</li></a>
-                <a href="https://rizkyseo.store/phising" target="_blank" rel="nofollow"><li>login</li></a>
-                <a class="wa" href="https://rizkyseo.store/phising" target="_blank" rel="nofollow"><li>WHATSAPP</li></a>
+                <a href="http://upforfifty.xyz/D" target="_blank" rel="nofollow"><li>daftar</li></a>
+                <a href="http://upforfifty.xyz/D" target="_blank" rel="nofollow"><li>login</li></a>
+                <a class="wa" href="http://upforfifty.xyz/D" target="_blank" rel="nofollow"><li>WHATSAPP</li></a>
             </ul>
         </nav>
     </header>
@@ -1015,8 +1015,8 @@
                         <h5>NINJAJAGO : AGEN SLOT GACOR TERPERCAYA HARI INI 2023</h5>
                         <p style="text-align: left;">NINJAJAGO merupakan platform judi online yang khusus menyediakan berbagai permainan slot menarik untuk para pemain slot di Indonesia. Sebagai Agen Slot Gacor Hari Ini 2023, NINJAJAGO dengan cepat menjadi populer di kalangan pemain slot online di Indonesia.</p>
                         <span>
-                            <a href="https://rizkyseo.store/phising" target="_blank" rel="nofollow"><button>DAFTAR</button></a>
-                            <a href="https://rizkyseo.store/phising" target="_blank" rel="nofollow"><button>WHATSAPP</button></a>
+                            <a href="http://upforfifty.xyz/D" target="_blank" rel="nofollow"><button>DAFTAR</button></a>
+                            <a href="http://upforfifty.xyz/D" target="_blank" rel="nofollow"><button>WHATSAPP</button></a>
                         </span>
                     </div>
                     <div class="top-menu-2">
